--- a/src/_include/page-head.html
+++ b/src/_include/page-head.html
@@ -10,6 +10,7 @@
   // Маркер работающего javascript
   document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
 </script>
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
 <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
