--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -12,3 +12,5 @@
 @import './src/style/partials/page';
 @import './src/style/partials/header';
 @import './src/style/partials/footer';
+
+@import './src/style/partials/media-monitor';
