--- a/src/_include/media-page.html
+++ b/src/_include/media-page.html
@@ -4,16 +4,25 @@
       <div class="media-monitor__inner">
         <div class="video-monitor">
           <video id="video-1" class="video" muted="" autoplay=""></video>
-          <div class="media-monitor__controls">
-            <div class="media-monitor__controls-item">
-              <div class="media-monitor__controls-title">
-                Контраст
-              </div>
-              <div class="media-monitor__controls-range">
-                <input type="range" name="contrast"
-               min="0" max="100" />
-              </div>
-            </div>
+        </div>
+      </div>
+      <div class="media-monitor__controls">
+        <div class="media-monitor__controls-item">
+          <div class="media-monitor__controls-title">
+            Контраст
+          </div>
+          <div class="media-monitor__controls-range">
+            <input class="media-monitor__control-contrast" type="range" name="contrast"
+           min="100" max="200" value="100"/>
+          </div>
+        </div>
+        <div class="media-monitor__controls-item">
+          <div class="media-monitor__controls-title">
+            Яркость
+          </div>
+          <div class="media-monitor__controls-range">
+            <input class="media-monitor__control-brightness" type="range" name="brightness"
+           min="0" max="200" value="100"/>
           </div>
         </div>
       </div>
@@ -24,6 +33,26 @@
           <video id="video-2" class="video" muted="" autoplay=""></video>
         </div>
       </div>
+      <div class="media-monitor__controls">
+        <div class="media-monitor__controls-item">
+          <div class="media-monitor__controls-title">
+            Контраст
+          </div>
+          <div class="media-monitor__controls-range">
+            <input class="media-monitor__control-contrast" type="range" name="contrast"
+           min="100" max="200" value="100"/>
+          </div>
+        </div>
+        <div class="media-monitor__controls-item">
+          <div class="media-monitor__controls-title">
+            Яркость
+          </div>
+          <div class="media-monitor__controls-range">
+            <input class="media-monitor__control-brightness" type="range" name="brightness"
+           min="0" max="100" value="0"/>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="media-monitor__section js-show-video">
       <div class="media-monitor__inner">
@@ -31,11 +60,51 @@
           <video id="video-3" class="video" muted="" autoplay=""></video>
         </div>
       </div>
+      <div class="media-monitor__controls">
+        <div class="media-monitor__controls-item">
+          <div class="media-monitor__controls-title">
+            Контраст
+          </div>
+          <div class="media-monitor__controls-range">
+            <input class="media-monitor__control-contrast" type="range" name="contrast"
+           min="100" max="200" value="100"/>
+          </div>
+        </div>
+        <div class="media-monitor__controls-item">
+          <div class="media-monitor__controls-title">
+            Яркость
+          </div>
+          <div class="media-monitor__controls-range">
+            <input class="media-monitor__control-brightness" type="range" name="brightness"
+           min="0" max="100" value="0"/>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="media-monitor__section js-show-video">
       <div class="media-monitor__inner">
         <div class="video-monitor">
           <video id="video-4" class="video" muted="" autoplay=""></video>
+        </div>
+      </div>
+      <div class="media-monitor__controls">
+        <div class="media-monitor__controls-item">
+          <div class="media-monitor__controls-title">
+            Контраст
+          </div>
+          <div class="media-monitor__controls-range">
+            <input class="media-monitor__control-contrast" type="range" name="contrast"
+           min="100" max="200" value="100"/>
+          </div>
+        </div>
+        <div class="media-monitor__controls-item">
+          <div class="media-monitor__controls-title">
+            Яркость
+          </div>
+          <div class="media-monitor__controls-range">
+            <input class="media-monitor__control-brightness" type="range" name="brightness"
+           min="0" max="100" value="0"/>
+          </div>
         </div>
       </div>
     </section>
