--- a/src/style/partials/media-monitor.scss
+++ b/src/style/partials/media-monitor.scss
@@ -43,6 +43,16 @@
     &--is-show {
       visibility: visible;
       opacity: 1;
+      transition: visibility 0.6s $transition-time, opacity 0.6s $transition-time;
+    }
+
+    @media screen and (max-width: $fablet) {
+      left: 10px;
+      top: 10px;
+      height: 34px;
+      padding: 0 15px;
+      width: auto;
+      @include font(14px, $font-family, 34px);
     }
   }
 
@@ -51,17 +61,44 @@
     left: 15px;
     top: 50px;
     padding: 20px;
+    max-width: 250px;
     border-radius: $border-radius;
     background-color: rgba($black, 0.4);
+    opacity: 0;
+    visibility: hidden;
     z-index: 3;
     transform: scale(0.5);
     transform-origin: left top;
+    transition: opacity 0.2s, visibility 0.2s;
+
+    &--is-show {
+      opacity: 1;
+      visibility: visible;
+      transition: opacity 0.3s $transition-time, visibility 0.3s $transition-time;
+    }
+
+    @media screen and (max-width: $fablet) {
+      top: 25px;
+      left: 5px;
+    }
   }
 
   &__controls-title {
     margin-bottom: 5px;
     @include extrasmallString($white);
     color: $white;
+  }
+
+  &__controls-item {
+    margin-bottom: 10px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__controls-range input {
+    width: 100%;
   }
 }
 
