--- a/src/_include/media-page.html
+++ b/src/_include/media-page.html
@@ -3,7 +3,8 @@
     <section class="media-monitor__section js-show-video">
       <div class="media-monitor__inner">
         <div class="video-monitor">
-          <video id="video-1" class="video" muted="" autoplay=""></video>
+          <video id="video-1" class="video" muted autoplay="autoplay">
+          </video>
         </div>
       </div>
       <div class="media-monitor__controls">
@@ -30,7 +31,7 @@
     <section class="media-monitor__section js-show-video">
       <div class="media-monitor__inner">
         <div class="video-monitor">
-          <video id="video-2" class="video" muted="" autoplay=""></video>
+          <video id="video-2" class="video" muted autoplay></video>
         </div>
       </div>
       <div class="media-monitor__controls">
@@ -57,7 +58,7 @@
     <section class="media-monitor__section js-show-video">
       <div class="media-monitor__inner">
         <div class="video-monitor">
-          <video id="video-3" class="video" muted="" autoplay=""></video>
+          <video id="video-3" class="video" muted autoplay></video>
         </div>
       </div>
       <div class="media-monitor__controls">
@@ -84,7 +85,7 @@
     <section class="media-monitor__section js-show-video">
       <div class="media-monitor__inner">
         <div class="video-monitor">
-          <video id="video-4" class="video" muted="" autoplay=""></video>
+          <video id="video-4" class="video" muted autoplay></video>
         </div>
       </div>
       <div class="media-monitor__controls">
@@ -110,4 +111,7 @@
     </section>
   </div>
   <button class="button button--marked media-monitor__close js-video-close">К камерам</button>
+  <div class="media-monitor__sound js-video-sound">
+
+  </div>
 </div>
