--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -88,7 +88,8 @@
     height: 100%;
     padding: 30px;
     background-color: $block-bg;
-    transform: translateX(100%);
+    transform: scale(0);
+    transform-origin: 100% 0;
     transition: transform $transition-time;
   }
 
@@ -148,7 +149,7 @@
       }
 
       & ~ .nav__wr .nav {
-        transform: translateX(0);
+        transform: scale(1);
       }
     }
   }
