Added toggle tabs

--- a/src/_include/header.html
+++ b/src/_include/header.html
@@ -19,10 +19,10 @@
         </label>
         <div class="nav__wr">
           <nav class="nav">
-            <a class="nav__item nav__item--is-active" href="#">События</a>
-            <a class="nav__item" href="#">Сводка</a>
-            <a class="nav__item" href="#">Устройства</a>
-            <a class="nav__item" href="#">Сценарии</a>
+            <a class="nav__item" data-tab="event" href="#">События</a>
+            <a class="nav__item" data-tab="common" href="#">Сводка</a>
+            <a class="nav__item" data-tab="devices" href="#">Устройства</a>
+            <a class="nav__item" data-tab="scripts" href="#">Сценарии</a>
           </nav>
         </div>
       </div>
