Added typescript hw2

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -13,3 +13,5 @@
 @import './src/style/partials/footer';
 @import './src/style/partials/event';
 @import './src/style/partials/player';
+
+@import './src/style/partials/monitor';
