--- a/src/style/partials/monitor.scss
+++ b/src/style/partials/monitor.scss
@@ -1,39 +1,3 @@
-html {
-  position: relative;
-  box-sizing: border-box;
-  font-size: 10px;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -ms-overflow-style: scrollbar;
-  -ms-text-size-adjust: 100%; // stylelint-disable-line  property-no-vendor-prefix
-  min-width: 320px;
-  height: 100%;
-  overflow-x: hidden;
-  background-color: $body-bg;
-  -webkit-overflow-scrolling: auto;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-body {
-  position: relative;
-  margin: 0;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: auto;
-}
-
-.container {
-  position: relative;
-  width: 100%;
-  max-width: 1440px;
-  height: 100%;
-  margin: 0 auto;
-  padding: 0 10px;
-}
-
 .monitor {
   position: relative;
   width: 100%;
@@ -45,7 +9,7 @@ body {
   position: relative;
   width: 100%;
   height: 600px;
-  background-color: grey;
+  background-color: rgb(66, 66, 66);
   overflow: hidden;
   user-select: none;
   touch-action: none;
@@ -57,8 +21,6 @@ body {
   top: 0;
   width: auto;
   height: 100%;
-  -webkit-user-select: none;
-  -moz-user-select: none
   user-select: none;
   touch-action: none;
   filter: brightness(0.5);
@@ -69,7 +31,6 @@ body {
   width: auto;
   height: 100%;
   pointer-events: none;
-
 }
 
 .monitor__screen-indicator {
@@ -88,7 +49,7 @@ body {
   font-size: 20px;
 }
 
-.monitor__scale::after{
+.monitor__scale::after {
   content: 'X';
 }
 
