Added typescript hw3

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -14,4 +14,6 @@
 @import './src/style/partials/event';
 @import './src/style/partials/player';
 
+@import './src/style/partials/media-monitor';
+
 @import './src/style/partials/monitor';
